--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,70 +1,3 @@
-/* .bannerButton {
-  font-family: "Lato", sans-serif;
-  font-weight: 700;
-  display: flex;
-  color: black;
-  justify-content: center;
-  white-space: nowrap;
-  max-width: 191px;
-  background-color: #ebff00;
-  border: #ebff00;
-  border-color: #ebff00;
-  border-radius: 100px;
-}
-
-.button {
-  font-family: "Lato", sans-serif;
-  display: flex;
-  justify-content: center;
-  white-space: nowrap;
-  font-weight: 700;
-  border-radius: 100px;
-  max-width: 191px;
-  background-color: transparent;
-  color: #ebff00;
-  border: #ebff00 solid;
-}
-
-.button:hover {
-  color: #ebff0099;
-  border: #ebff0099 solid;
-}
-
-.bannerButton:hover {
-  background-color: #ebff0099;
-}
-
-@media (min-width: 1248px) {
-  .bannerButton {
-    padding: 14px 40px;
-    font-size: 22px;
-  }
-  .button {
-    padding: 14px 40px;
-    font-size: 22px;
-  }
-}
-
-@media (max-width: 1247px) {
-  .bannerButton {
-    padding: 7px 40px;
-    font-size: 22px;
-  }
-  .button {
-    padding: 7px 40px;
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 767px) {
-  .bannerButton {
-    font-size: 16px;
-  }
-  .button {
-    font-size: 16px;
-  }
-} */
-
 .button {
   font-family: "Lato", sans-serif;
   display: flex;
@@ -96,6 +29,7 @@
   background-color: #ebff0099;
 }
 
+/* desktop */
 @media (min-width: 1248px) {
   .button {
     padding: 14px 40px;
@@ -103,21 +37,23 @@
   }
 }
 
+/* tablet */
 @media (max-width: 1247px) {
-  .button {
-    padding: 7px 40px;
-  }
   .button--default {
     font-size: 16px;
+    padding: 7px 20px;
   }
   .button--banner {
     font-size: 22px;
+    padding: 14px 40px;
   }
 }
 
+/* mobile */
 @media (max-width: 767px) {
   .button--default,
   .button--banner {
     font-size: 16px;
+    padding: 7px 40px;
   }
 }
